# backend/api/routes/routes.go
@@ -4,11 +4,12 @@ import (
 	"server/validaton"
 
 	"github.com/gofiber/fiber/v2"
-	"server/controller"
+	"server/controllers"
 )
 
 
 func SetupRoutes(app *fiber.App){
 	//auth
-	app.Post("/user/signup", validaton.ValidateUser, controller.Register)
+	app.Post("/user/signup", validaton.ValidateUser, controllers.Register)
+	app.Post("/user/signin", validaton.ValidateUser, controllers.Login)
 }
